# Big-Data-Project-2

./: .gitignore  Authors.txt  Makefile  README.md  docker-compose.yml  pyproject.toml
Analytics/: README.md  analytics.py  app.py  load_data.py
analytics/: README.md  analytics.py  load_data.py
application/: README.md  app.py
application_photo_and_ML_html/: ml_analysis.html
common/: README.md  app.py  load_data.py
data_ingestion/: data_ingestion.py
data_processing/: README.md  cleaning_output.txt  data_cleaning.py  data_pipeline.py  data_processing.py
docker/dashboard/: Dockerfile
docker/data_processing/: Dockerfile
docker/ingestion/: Dockerfile
hadoop/: config  docker-compose.yml
hadoop-config/: config  config.env
ml_module/: README.md  churn.py  customer_seg.py  customer_segmentation.py  main.ipynb  ml_analysis.ipynb  ml_analysiss.ipynb
sql-analytics/: load_data.py  sql_analytics.py  sql_queries.py
sql_analytics/: README.md  analytics.py  load_data.py  sql_queries.py
