[project]
name = "BigData"
version = "0.0.1"
description = "Big Data project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest>=8.3.2",
    "pandas>=2.2.2",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "hdfs>=2.7",
    "dash>=2.18.2",
    "plotly>=5.24.1",
    "pyspark>=3.5.3",
]
